UPDATE: footer modification

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ For more you can also goto <a href="https://www.google.com/search?sca_esv=384eec
 
 </table>
 <h1>
-    footer
+    The footer is always at the bottom
 </h1>
 </body>
 </html>
